<?xml version="1.0" encoding="utf-8"?>
<resources>
    <plurals name="track">
        <item quantity="one">трек</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>

    <plurals name="minute">
        <item quantity="one">минута</item>
        <item quantity="few">минуты</item>
        <item quantity="many">минут</item>
        <item quantity="other">минут</item>
    </plurals>

    <string name="search_button">Поиск</string>
    <string name="Player_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="color_theme">Темная тема</string>
    <string name="share_button">Поделиться</string>
    <string name="support_button">Написать в поддержку</string>
    <string name="terms_of_use_button">Пользовательское соглашение</string>
    <string name="setting_button">Настройки</string>
    <string name="app_name" translatable="false">Playlist Maker</string>

    <string name="search_title">Поиск</string>
    <string name="shareButtonText" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="supportButtonMessage">«Спасибо разработчикам и разработчицам за крутое приложение!»</string>
    <string name="supportButtonText">«Сообщение разработчикам и разработчицам приложения Playlist Maker»</string>
    <string name="termsOfUseArticle" translatable="false">https://yandex.ru/legal/practicum_offer/</string>

    <string name="input_hint">Поиск</string>

    <string name="song_name">Название песни</string>
    <string name="artist_name">ИсполнительИсполнительИсполнительИсполнительИсполнительИсполнительИсполнитель</string>
    <string name="duration">Длительность</string>

    <string name="title_activity_settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Сообщения</string>
    <string name="sync_header">Синхронизация</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Ваша сигнатура</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Периодически синхронизируйте электронную почту</string>
    <string name="attachment_title">Загружать входящие вложения</string>
    <string name="attachment_summary_on">Автоматически загружать вложения для входящих писем</string>
    <string name="attachment_summary_off">Загружать вложения только по запросу вручную</string>

    <string name="track_duration_format">%1\$d:%2\$02d</string>

    <string name="no_search_results_message">Ничего не нашлось</string>
    <string name="communication_problems_message">Проблемы со связью. \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update_button_text">Обновить</string>

    <string name="you_were_looking_for">Вы искали</string>

    <string name="url_mail">mailto:test@example.com</string>
    <string name="type_share_text">text/plain</string>

    <string name="playlist_create">Плэйлист создан</string>
    <string name="media_library">Медиатека</string>

    <string name="there_is_not_a_single_playlist">Вы не создали ни одного плейлиста</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_tracks_in_favorites">Ваша медиатека пуста</string>

    <string name="duration_title">Длительность</string>
    <string name="album_title">Альбом</string>
    <string name="year_title">Год</string>
    <string name="genre_title">Жанр</string>
    <string name="country_title">Страна</string>

    <string name="duration_value">00:00</string>
    <string name="album_value">Название альбома тут</string>
    <string name="year_value">Год выпуска тут</string>
    <string name="genre_value">Такой вот жанр</string>
    <string name="country_value">Россия-Матушка</string>

    <string name="current_time">01:13</string>
    <string name="name_track">Название трека</string>

    <string name="search_bottom_menu_title">Поиск</string>
    <string name="medialibrary_bottom_menu_title">Медиатека</string>
    <string name="settings_bottom_menu_title">Настройки</string>
    <string name="agreement_title">Соглашение</string>

    <string name="agreement_h1">Оферта на оказание образовательных услуг дополнительного образования Яндекс.Практикум  для физических лиц</string>
    <string name="agreement_text1">Данный документ является действующим, если расположен по адресу: https://yandex.ru/legal/practicum_offer\n\nРоссийская Федерация, город Москва</string>
    <string name="agreement_h2">1. ТЕРМИНЫ</string>

    <string name="agreement_text2">Понятия, используемые в Оферте, означают следующее:\n\n  Авторизованные адреса — адреса электронной почты каждой Стороны. Авторизованным адресом Исполнителя является адрес электронной почты, указанный в разделе 11 Оферты. Авторизованным адресом Студента является адрес электронной почты, указанный Студентом в Личном кабинете.\n\n  Вводный курс — начальный Курс обучения по представленным на Сервисе Программам обучения в рамках выбранной Студентом Профессии или Курсу, рассчитанный на определенное количество часов самостоятельного обучения, который предоставляется Студенту единожды при регистрации на Сервисе на безвозмездной основе. В процессе обучения в рамках Вводного курса Студенту предоставляется возможность ознакомления с работой Сервиса и определения возможности Студента продолжить обучение в рамках Полного курса по выбранной Студентом Программе обучения. Точное количество часов обучения в рамках Вводного курса зависит от выбранной Студентом Профессии или Курса и определяется в Программе обучения, размещенной на Сервисе. Максимальный срок освоения Вводного курса составляет 1 (один) год с даты начала обучения.</string>
    <string name="subject">Сообщение разработчикам и разработчицам...</string>
    <string name="message">Спасибо разработчикам и разработчицам за отличное приложение!!!</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_button_text">Создать</string>
    <string name="confirmation_dialog_title">Завершить создание плейлиста?</string>
    <string name="confirmation_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="confirmation_dialog_negative">Отмена</string>
    <string name="confirmation_dialog_positive">Завершить</string>
    <string name="playlist_created_snackbar">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>

    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>

    <string name="delete_track_dialog_title">Удалить трек</string>
    <string name="delete_track_dialog_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_track_dialog_positive">Удалить</string>

    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист %1$s?</string>
    <string name="delete_playlist_dialog_positive">Да</string>
    <string name="delete_playlist_dialog_negative">Нет</string>

    <string name="playlist_tracks_info">%1$s · %2$s</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks">Ваш плейлист пуст</string>

</resources>