<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ActivityMainGeneralStyle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/titleFontSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:orientation="vertical">

        <Button
            android:id="@+id/editTextSearch"
            style="@style/ActivityMainButtonStyle"
            android:text="@string/search_button"
            app:icon="@drawable/search_button" />

        <Button
            style="@style/ActivityMainButtonStyle"
            android:id="@+id/medialibrary"
            android:text="@string/medialibrary_button"
            app:icon="@drawable/medialibrary_button" />

        <Button
            style="@style/ActivityMainButtonStyle"
            android:id="@+id/settings"
            android:text="@string/setting_button"
            app:icon="@drawable/settings_button" />

    </LinearLayout>


</LinearLayout>