<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivitySettingsGeneralStyle">

    <!-- Заголовок и кнопка "назад" -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables"
        android:layout_marginBottom="40dp">

        <!-- Кнопка "назад" -->
        <ImageButton
            android:id="@+id/backButton"
            style="@style/ActivitySettingsColorAndFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/offset_29"
            android:contentDescription="This is an arrow - this is a button leading back"
            app:srcCompat="@drawable/arrow_back_button"
            />

        <!-- Заголовок активности -->
        <TextView
            style="@style/ActivitySettingsColorAndFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/agreement_title"
            android:textSize="@dimen/titleFontSize"
            app:icon="@drawable/arrow_back_button"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding"
            app:iconTint="@color/black" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/agreement_h1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/color_text"
        android:fontFamily="@font/ys_display_bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:autoLink="web"
        android:text="@string/agreement_text1"
        android:textSize="@dimen/offset_16"
        android:textColor="@color/color_text"
        android:fontFamily="@font/ys_display_regular"
        android:layout_marginBottom="20dp"
        android:textColorLink="@color/color_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/agreement_h2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/color_text"
        android:fontFamily="@font/ys_display_bold"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/agreement_text2"
        android:textSize="@dimen/offset_16"
        android:textColor="@color/color_text"
        android:fontFamily="@font/ys_display_regular" />






</LinearLayout>
    </ScrollView>





