<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="28dp"
            android:contentDescription="This is an arrow - this is a button leading back"
            app:srcCompat="@drawable/arrow_back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/settings_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/arrow_back_button"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/black" />
    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:paddingVertical="21dp"
        android:paddingEnd="-10dp"
        android:text="@string/color_theme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/paddingVertical">

        <TextView
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_button"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:contentDescription="This is an icon - a button that helps to share content"
            app:srcCompat="@drawable/share_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="21dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support_button"
            android:textColor="@color/black" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="This is an icon depicting a technical support specialist."
            app:srcCompat="@drawable/support_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="21dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_of_use_button"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/arrow_forward_button" />
    </LinearLayout>


</LinearLayout>