<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.player.fragment.PlayerFragment">

        <ImageView
            android:id="@+id/player_main"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintBottom_toTopOf="@+id/track_name"
            app:layout_constraintDimensionRatio="h,16:16"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/toolbarMedia" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/play_button"
            app:layout_constraintBottom_toTopOf="@+id/time_track"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" />

        <ImageView
            android:id="@+id/add_to_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/add_track_to_playlist"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <ImageView
            android:id="@+id/add_to_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/add_to_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/name_track"
            android:textColor="@color/color_text"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/artist_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/artist_name"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/play_button"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/track_name" />

        <TextView
            android:id="@+id/time_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/duration_value"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/duration_title"
            app:layout_constraintEnd_toEndOf="@+id/play_button"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="@+id/play_button" />

        <TextView
            android:id="@+id/country_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/country_title"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/genre_title"
            app:layout_constraintVertical_chainStyle="spread_inside" />


        <TextView
            android:id="@+id/genre_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/genre_title"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/country_title"
            app:layout_constraintStart_toStartOf="@+id/year_title" />

        <TextView
            android:id="@+id/year_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/year_title"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/genre_title"
            app:layout_constraintStart_toStartOf="@+id/album_title" />

        <TextView
            android:id="@+id/album_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/album_title"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/year_title"
            app:layout_constraintStart_toStartOf="@+id/duration_title" />

        <TextView
            android:id="@+id/duration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/duration"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/album_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/country_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/country_value"
            android:textColor="@color/color_text"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/genre_value" />

        <TextView
            android:id="@+id/genre_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/genre_value"
            android:textColor="@color/color_text"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/country_value"
            app:layout_constraintEnd_toEndOf="@+id/year_value" />

        <TextView
            android:id="@+id/year_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/year_value"
            android:textColor="@color/color_text"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/genre_value"
            app:layout_constraintEnd_toEndOf="@+id/album_value" />

        <TextView
            android:id="@+id/album_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxWidth="300dp"
            android:maxLines="1"
            android:text="@string/album_value"
            android:textColor="@color/color_text"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/year_value"
            app:layout_constraintEnd_toEndOf="@+id/duration_value" />

        <TextView
            android:id="@+id/duration_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/duration"
            android:textColor="@color/color_text"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/album_value"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMedia"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrow_back_button"
            app:titleTextColor="@color/color_text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline_right"
            app:layout_constraintGuide_begin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbarMedia" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline_left" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet_playlists"
        android:layout_width="match_parent"
        android:layout_height="505dp"
        android:background="@drawable/background_bottom_sheet"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_grey_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/add_to_playlist"
            android:textColor="@color/color_text"
            android:textSize="19sp" />

        <Button
            android:id="@+id/create_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/light_grey_bg_for_button"
            android:fontFamily="@font/ys_display_medium"
            android:foreground="?attr/selectableItemBackground"
            android:lineHeight="16dp"
            android:paddingHorizontal="14dp"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_playlist_bottom_sheet" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
